plugins {
    id 'java'
    id 'war'
}

group 'com.zou'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

//编译JAVA文件时采用UTF-8
tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

ext  {
    logback= "1.1.3"
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'

    implementation  'org.slf4j:slf4j-api:1.7.14'
    implementation  "ch.qos.logback:logback-core:${logback}"
    implementation  "ch.qos.logback:logback-classic:${logback}"
    
    implementation  "javax.servlet:javax.servlet-api:4.0.0"
    implementation  "mysql:mysql-connector-java:8.0.15"
    implementation  'com.google.code.gson:gson:2.8.5'
    implementation  'com.google.zxing:core:3.3.3'
    

    implementation  'org.testng:testng:6.14.3'

    implementation 'commons-io:commons-io:2.6'
    implementation 'commons-fileupload:commons-fileupload:1.4'
}
